--- a/Documents/FairPlay/app/src/main/res/layout/math_quiz.xml
+++ b/Documents/FairPlay/app/src/main/res/layout/math_quiz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#adcfea"
+    android:background="#FEDEBE"
     tools:context=".Math_Quiz">
 
     <TextView
@@ -12,39 +12,43 @@
         android:layout_width="300dp"
         android:layout_height="65dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
+        android:fontFamily="@font/amarante"
+        android:gravity="center_horizontal"
         android:text="Guess!!"
         android:textAlignment="center"
-        android:textColor="#286ca3"
-        android:textSize="60sp"
+        android:textColor="#FF8303"
+        android:textSize="50dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="200dp"
         android:layout_height="80dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/amarante"
+        android:gravity="center_horizontal"
         android:text=""
         android:textAlignment="center"
-        android:textColor="#286ca3"
-        android:textSize="40sp"
+        android:textColor="#FF8303"
+        android:textSize="40dp"
         app:layout_constraintBottom_toTopOf="@id/gridLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toBottomOf="@id/textView1" />
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="400dp"
         android:layout_height="350dp"
-        android:layout_marginBottom="170dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="40dp"
         android:padding="10dp"
         app:columnCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,13 +61,15 @@
             android:id="@+id/button1"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="7dp"
             android:layout_marginLeft="25dp"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#FF8303"
+            android:fontFamily="@font/amarante"
             android:onClick="load"
             android:tag="0"
-            android:textColor="#adcfea"
-            android:background="@drawable/rounded_corners"
             android:text="a"
+            android:textColor="#FEDEBE"
             android:textSize="35sp"
             app:layout_column="0"
             app:layout_row="0" />
@@ -71,14 +77,16 @@
         <Button
             android:id="@+id/button2"
             android:layout_width="150dp"
-            android:layout_marginTop="7dp"
             android:layout_height="150dp"
             android:layout_marginLeft="25dp"
-            android:onClick="load"
-            android:textColor="#adcfea"
-            android:tag="1"
+            android:layout_marginTop="7dp"
             android:background="@drawable/rounded_corners"
+            android:backgroundTint="#FF8303"
+            android:fontFamily="@font/amarante"
+            android:onClick="load"
+            android:tag="1"
             android:text="a"
+            android:textColor="#FEDEBE"
             android:textSize="35sp"
             app:layout_column="1"
             app:layout_row="0" />
@@ -88,12 +96,14 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginLeft="25dp"
-            android:onClick="load"
             android:layout_marginTop="7dp"
-            android:textColor="#adcfea"
-            android:tag="2"
             android:background="@drawable/rounded_corners"
+            android:backgroundTint="#FF8303"
+            android:fontFamily="@font/amarante"
+            android:onClick="load"
+            android:tag="2"
             android:text="a"
+            android:textColor="#FEDEBE"
             android:textSize="35sp"
             app:layout_column="0"
             app:layout_row="1" />
@@ -104,14 +114,44 @@
             android:layout_height="150dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="7dp"
-            android:onClick="load"
-            android:textColor="#adcfea"
-            android:tag="3"
             android:background="@drawable/rounded_corners"
+            android:backgroundTint="#FF8303"
+            android:fontFamily="@font/amarante"
+            android:onClick="load"
+            android:tag="3"
             android:text="a"
+            android:textColor="#FEDEBE"
             android:textSize="35sp"
             app:layout_column="1"
             app:layout_row="1" />
     </androidx.gridlayout.widget.GridLayout>
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/amarante"
+        android:gravity="center_horizontal"
+        android:text="Math Quiz"
+        android:textColor="#000000"
+        android:textSize="60dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:layout_gravity="center_horizontal"
+        android:background="#000000"
+        android:fontFamily="@font/amarante"
+        android:text="                             "
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView20"
+        app:layout_constraintStart_toStartOf="@+id/textView20"
+        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
