--- a/Documents/FairPlay/app/src/main/res/layout/maze_world.xml
+++ b/Documents/FairPlay/app/src/main/res/layout/maze_world.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FEDEBE"
     tools:context=".Maze_World">
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridlayout1"
         android:layout_width="360dp"
         android:layout_height="360dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout2">
 
         <ImageView
             android:id="@+id/imageView"
@@ -77,7 +77,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_row="0"
-            app:srcCompat="@drawable/wall" />
+            app:srcCompat="@drawable/wall"
+            tools:ignore="ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/imageView5"
@@ -161,7 +162,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_row="0"
-            app:srcCompat="@drawable/wall" />
+            app:srcCompat="@drawable/wall"
+            tools:ignore="ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/imageView11"
@@ -301,7 +303,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_row="0"
-            app:srcCompat="@drawable/wall" />
+            app:srcCompat="@drawable/wall"
+            tools:ignore="ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/imageView21"
@@ -357,7 +360,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_row="0"
-            app:srcCompat="@drawable/wall" />
+            app:srcCompat="@drawable/wall"
+            tools:ignore="ImageContrastCheck" />
 
 
         <ImageView
@@ -1104,12 +1108,10 @@
         android:layout_width="360dp"
         android:layout_height="132dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridlayout">
+        app:layout_constraintTop_toBottomOf="@+id/gridlayout1">
 
         <ImageView
             android:id="@+id/uarrow"
@@ -1117,6 +1119,7 @@
             android:layout_height="65dp"
             android:layout_marginLeft="147dp"
             android:layout_marginTop="1dp"
+            android:background="@drawable/rounded_corners"
             android:clickable="true"
             android:focusable="false"
             android:onClick="up"
@@ -1135,6 +1138,7 @@
             android:layout_height="65dp"
             android:layout_marginLeft="82dp"
             android:layout_marginTop="66dp"
+            android:background="@drawable/rounded_corners"
             android:clickable="true"
             android:focusable="false"
             android:onClick="left"
@@ -1154,6 +1158,7 @@
             android:layout_height="65dp"
             android:layout_marginLeft="147dp"
             android:layout_marginTop="66dp"
+            android:background="@drawable/rounded_corners"
             android:clickable="true"
             android:focusable="false"
             android:onClick="down"
@@ -1173,6 +1178,7 @@
             android:layout_height="65dp"
             android:layout_marginLeft="212dp"
             android:layout_marginTop="66dp"
+            android:background="@drawable/rounded_corners"
             android:clickable="true"
             android:focusable="false"
             android:onClick="right"
@@ -1187,40 +1193,65 @@
             app:srcCompat="@drawable/arrow" />
     </androidx.gridlayout.widget.GridLayout>
 
-    <androidx.gridlayout.widget.GridLayout
-        android:layout_width="412dp"
-        android:layout_height="184dp"
-        app:layout_constraintBottom_toTopOf="@+id/gridlayout1"
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/amarante"
+        android:gravity="center_horizontal"
+        android:text="Maze World"
+        android:textColor="#000000"
+        android:textSize="60dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:layout_gravity="center_horizontal"
+        android:background="#000000"
+        android:fontFamily="@font/amarante"
+        android:text="                                "
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView20"
+        app:layout_constraintStart_toStartOf="@+id/textView20"
+        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView20">
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginStart="155dp"
             android:layout_marginLeft="155dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="150dp"
             android:layout_marginRight="150dp"
             android:layout_marginBottom="76dp"
             android:background="@drawable/rounded_corners"
             android:onClick="reset"
             android:text="START"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:visibility="visible"
+            app:backgroundTint="#FF8303"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imageView25"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_column="0"
-            app:layout_row="0"
-            app:srcCompat="@drawable/win" />
 
     </androidx.gridlayout.widget.GridLayout>
 
